# python_ex

DOD_04/ex00/: statistics.py  tester.py
DOD_04/ex01/: in_out.py
DOD_04/ex02/: callLimit.py
DOD_04/ex03/: new_student.py
OOP_03/ex00/: S1E9.py  tester.py
OOP_03/ex01/: S1E7.py  S1E9.py  tester.py
OOP_03/ex02/: DiamondTrap.py  S1E7.py  tester.py
OOP_03/ex03/: ft_calculator.py
OOP_03/ex04/: ft_calculator.py
array_01/ex00/: give_bmi.py  tester.py
array_01/ex01/: array2D.py
array_01/ex02/: load_image.py
array_01/ex03/: zoom.py
array_01/ex04/: load_image.py  rotate.py  tester.py
array_01/ex05/: mytester.py  pimp_image.py
datatable_02/ex00/: load_csv.py
datatable_02/ex01/: aff_life.py  load_csv.py
datatable_02/ex02/: aff_pop.py
datatable_02/ex03/: projection_life.py
starting_00/ex00/: Hello.py
starting_00/ex01/: format_ft_time.py
starting_00/ex02/: find_ft_type.py
starting_00/ex03/: NULL_not_found.py
starting_00/ex04/: whatis.py
starting_00/ex05/: building.py
starting_00/ex06/: filterstring.py  ft_filter.py  pourmoi.py  tester.py
starting_00/ex07/: sos.py
starting_00/ex08/: Loading.py  tester.py
starting_00/ex09/: LICENSE  README.md  pyproject.toml  requirements.txt  run.sh  setup.py
starting_00/ex09/ft_package/: __init__.py  count_in_list.py
starting_00/ex09/ft_package.egg-info/: PKG-INFO
