[build-system]
requires = ["setuptools>=59.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
authors = [
  { email="thole@student.42.fr" },
]
description = "A sample test package"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = []
